k8s/overlays/blue/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress-canary
  namespace: todo-app # Ensure this matches your namespace
$patch: delete
